2004-08-05  Glenn Randers-Pehrson <glennrp@glennrp.com>

	* coders/png.c: Fixes for CERT security alert TA04-217A described
	at "http://www.us-cert.gov/cas/techalerts/TA04-217A.html".

2004-07-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am:  Update to Automake 1.9.

2004-07-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Updated with changes since the 1.1.2 release.

2004-07-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tiff/libtiff/tif_lzw.c: Incorporated TIFF LZW compression
	support.
	* lcms: Merged in lcms 1.13 from CVS HEAD.

2004-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (CVS_BRANCH_TAG): Record the CVS branch tag that
	source package is obtained from.
	* configure.ac: Pass essential flags on down to subordinate
	configures when performing 'make distcheck'.  Support DESTDIR
	installs for PERL 5.8.1 and later, which support DESTDIR
	internally.

2004-07-09  Glenn Randers-Pehrson  <randeg@alum.rpi.edu>

	* coders/bmp.c (ReadBMPImage): Removed if-test on reading
	red_mask, green_mask, and blue_mask.  These are only *valid*
	under certain conditions, but they are always present in the
	file.

2004-07-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Enable LZW compression by default.

2004-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickSetPassphrase): String was being
	copied to a null pointer.  Now memory is allocated as required
	prior to a copy.
	Ensure that all unimplemented functions return a proper error
	report.

2004-06-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): For -units, don't reset
	resolution if units are undefined. Report an error if the -units
	argument is not supported.

2004-06-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): When re-sampling an image,
	report an error if the image does not contain a valid resolution.