@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2004-08-06  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> NEWS: Updated with more changes since the 1.1.2 release.
+  <LI> coders/tiff.c (ReadTIFFImage): Support reading RGB/CMYK scanline
+        oriented TIFF images with arbitrary depth.
+
+</UL>
+<p>
 2004-08-05  Glenn Randers-Pehrson &lt;glennrp@glennrp.com&gt;
 
 <UL>
