@@ -21,7 +21,7 @@
 </tr>
 </table>
 <p>
-This file was last updated on July 25, 2004.
+This file was last updated on August 6, 2004.
 
 <p>
 Significant changes associated with GraphicsMagick 1.1.3 (release pending)
@@ -29,6 +29,8 @@ Significant changes associated with GraphicsMagick 1.1.3 (release pending)
 <p>
   Bugs fixed:<BR>
 <UL>
+  <LI> PNG fixes for CERT security alert TA04-217A described at
+    "http://www.us-cert.gov/cas/techalerts/TA04-217A.html".
   <LI> Take resolution units into consideration when resampling an image.
   <LI> If image units are changed, rescale existing image resolution values
     to match.<BR>
@@ -44,6 +46,8 @@ Significant changes associated with GraphicsMagick 1.1.3 (release pending)
 <p>
   Improvements:<BR>
 <UL>
+  <LI> Support reading RGB/CMYK scanline oriented TIFF images with arbitrary
+    depth.<BR>
   <LI> LZW support for GIF and TIFF is enabled by default.
   <LI> Incorporated lcms 1.13 for more speed, and bug-fixes.
   <LI> The configure script now looks for mozilla (or firebird) when looking
