@@ -1,8 +1,10 @@
-This file was last updated on July 25, 2004.
+This file was last updated on August 6, 2004.
 
 Significant changes associated with GraphicsMagick 1.1.3 (release pending)
 
   Bugs fixed:
+    * PNG fixes for CERT security alert TA04-217A described at
+    "http://www.us-cert.gov/cas/techalerts/TA04-217A.html".
     * Take resolution units into consideration when resampling an image.
     * If image units are changed, rescale existing image resolution values
     to match.
@@ -15,6 +17,8 @@ Significant changes associated with GraphicsMagick 1.1.3 (release pending)
     * DESTDIR install now works properly with PERL 5.8.1 and later.
 
   Improvements:
+    * Support reading RGB/CMYK scanline oriented TIFF images with arbitrary
+    depth.
     * LZW support for GIF and TIFF is enabled by default.
     * Incorporated lcms 1.13 for more speed, and bug-fixes.
     * The configure script now looks for mozilla (or firebird) when looking
